2021-12-03  Jordan Yelloz  <jordan@yelloz.me>

	* libpoke/std.pk (atoi): Added code that extracts any single leading '+'
	or '-', decides a polarity of the number to parse, and shifts over the
	input string by 1 character if necessary before parsing the digits.
	* testsuite/poke.std/std-test.pk: Added tests for new behaviors.

2021-12-02  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump poke version to 1.4.
	* NEWS: Add entries for 1.4.

2021-12-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (strace): Re-implement using
	`JITTER_AT_DEPTH_STACK`.

2021-12-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-set.c (pk_cmd_set_oacutoff): Do not limit the value
	of oacutoff to 15.
	(pk_cmd_set_oindent): Ditto for oindent.
	(pk_cmd_set_odepth): Ditto for odepth.
	* doc/poke.texi (set command): Update accordingly.

2021-12-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_constructor): Generate the correct
	PVM type for the constructed array.
	* libpoke/pkl-gen.c (pkl_gen_pr_funcall): Likewise for the array
	of anys containing the varargs.
	(pkl_gen_ps_comp_stmt): Likewise for the array returned/consumed
	by the term_get_{bg}color builtins.
	* libpoke/pvm.jitter (asettb): Add an assertion to detect future
	occurrences of this problem.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (common_int_types): New variable.
	(pvm_make_integral_type_1): New function.
	(pvm_make_integral_type): Rewrite to cache integral types.
	(pvm_val_initialize): Initialize common integral types and
	register GC roots for them.
	(pvm_val_finalize): De-register GC roots for common integral
	types.
	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize not
	pvm_val_initialize!

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize instead of
	pvm_val_initialize.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>
