@@ -1,0 +1,3 @@
+/* { dg-do run } */
+
+printf "%%%i45o%%", -1;          /* { dg-output "%777777777777777%" } */
